data/derived/fa15/progs/unify/prog3742.ml.out
Characters 516-519:
  | GoldTimes   m4	    -> (eval(m4,x,y))*.(1.0+.sqrt(5))/.2.0;;
                                                    ^^^
Error: This expression has type int but an expression was expected of type
         float
